gcp/hello-app/manifests/ingress-based-fanout/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  annotations:
    cloud.google.com/backend-config: '{"default": "web-backendconfig"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
